--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-28 12:18:14
+lastsearch = 2024-07-28 15:21:29
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -57,9 +57,9 @@ title = Top 10 Rạp chiếu phim ở Đài Loan - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attractions-g293910-Activities-c56-t97-Taiwan.html
 
 [vi.wikipedia.org]
-match = 33.3%%
-title = Địa lý Đài Loan
-url = https://vi.wikipedia.org/wiki/Địa_lý_Đài_Loan
+match = -14.3%%
+title = Đài Loan – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [trithucvn.co]
 match = -100.0%%
@@ -215,4 +215,9 @@ url = https://olm.vn/index.php/cau-hoi/mot-vuon-rau-hinh-chu-nhat-co-chieu-rong-
 match = -71.4%%
 title = ĐÀI LOAN 5N4Đ | ĐÀI BẮC – ĐÀI TRUNG – CAO HÙNG
 url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai-loan-5n4d-dai-bac-dai-trung-cao-hung-2/
+
+[24hvisa.com]
+match = -28.6%%
+title = Dịch vụ làm Visa du lịch Đài Loan trọn gói
+url = https://24hvisa.com/chau-a/dai-loan/
 
