--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-28 09:32:26
+lastsearch = 2024-07-28 15:17:40
 
 [zhangbrickshop.com]
 match = -133.3
@@ -94,7 +94,7 @@ url = https://www.vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-t
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 10
-url = https://www.diepxuan.com/chieu-lac-d2-10.html?srsltid=AfmBOoqdn_kCYuHTXhsKVpFg4X5UpPQicC8hT_zrkO8tdt7eGji-1TMP
+url = https://www.diepxuan.com/chieu-lac-d2-10.html?srsltid=AfmBOopVbRw-d2v_FTdIDQaA9PJ4QyTpVd_bRnU99alAMProsSIjRrSx
 
 [visana.vn]
 match = -240.0%%
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -26.7%%
-title = Du học Hàn Quốc - ANIDO
-url = https://www.facebook.com/duhochanquoc.anido/posts/tin-vui-cho-du-học-sinh-d2-d10-có-thể-xin-visa-cư-trú-tại-10-tỉnh-thành-của-hq-n/722079063361574/
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [hoc247.vn]
 match = -213.3%%
@@ -182,9 +182,9 @@ title = 2'-deoxyuridine D2
 url = https://www.aptochem.com/p-101-2-deoxyuridine-d2.aspx
 
 [shopee.vn]
-match = -186.7%%
-title = Trống cajon AB-D2 có tay chỉnh kèm bao dù chống nước
-url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-chỉnh-kèm-bao-dù-chống-nước-Mặt-màu-gỗ-Bảo-hành-1-năm-i.37429989.7833832785
+match = -226.7%%
+title = Bộ đồ nam cộc tay mặc hè DSQ cotton 4 chiều thêu logo ...
+url = https://shopee.vn/Bộ-đồ-nam-cộc-tay-mặc-hè-DSQ-cotton-4-chiều-thêu-logo-ngực-phối-in-hình-lá-phong-D2-monogram-BH119P-i.29600811.24469535417
 
 [uspharma.vn]
 match = -20.0%%
@@ -364,7 +364,7 @@ url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/
 [vattumientay.com]
 match = -166.7%%
 title = Phe Gài Trục Thép D210 DIN 471 | vattumientay.com
-url = https://vattumientay.com/phe-gai-truc-thep-d210-din-471.p-5424.html
+url = https://vattumientay.com/phe-gai-truc-thep-d210-din-471.p-5424.html?srsltid=AfmBOopE3ISPmJvv14Wv7wmqGx3agu3GnQwzhbt6nuynWORJCrWb1koJ
 
 [mn-pvinh.tphue.thuathienhue.edu.vn]
 match = -126.7%%
