--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-28 14:38:09
+lastsearch = 2024-07-28 15:24:35
 
 [www.zillow.com]
 match = -69.2%%
@@ -609,7 +609,7 @@ url = https://apnews.com/article/willis-wade-relationship-allegations-trump-elec
 [www.lazada.vn]
 match = -176.9%%
 title = Ga Ni Long Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-ni-long/
+url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOoqwm4kkE5MUsWMGGtvAcEgXMqVCTeJSIZ0fPYaigtB3KDtQnrCa
 
 [www.njcaa.org]
 match = -140.0%%
@@ -625,4 +625,9 @@ url = https://www.georgiaencyclopedia.org/articles/arts-culture/historically-bla
 match = -53.8%%
 title = Georgia State University
 url = https://www.gsu.edu/
+
+[www.ncbi.nlm.nih.gov]
+match = -276.9%%
+title = Current status of white coat hypertension: where are we?
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7318827/
 
