--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-clfi/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-clfi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-clfi.html
 lastopen = 2024-06-06 17:09:48
 
 [search]
-lastsearch = 2024-07-28 14:34:38
+lastsearch = 2024-07-28 15:15:55
 
 [www.everonvn.vn]
 match = 29.6%%
@@ -12,9 +12,9 @@ title = ĐỆM LÒ XO EVERON, KING KOIL
 url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 
 [everonvn.com.vn]
-match = 34.1%%
-title = Đệm Lò Xo Everon, King Koil 【 🥇Giảm 20%% 】HàngChính ...
-url = https://everonvn.com.vn/23/dem-lo-xo-everon?srsltid=AfmBOopZzqd2UoYe1HAlefAvhdG4VEkapvXdxsGUWDvs8QXkfBYdRrEP
+match = 31.7%%
+title = Đệm Lò Xo Everon, King Koil 【 Giảm 20%% 】HàngChính Hãng
+url = https://everonvn.com.vn/23/dem-lo-xo-everon
 
 [everonkorea.com]
 match = 7.3%%
