--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-28 06:30:29
+lastsearch = 2024-07-28 15:27:41
 
 [demtot.com]
-match = 45.0%%
-title = Đệm lò xo túi Acness
-url = https://demtot.com/dem-lo-xo-tui-acnes/
+match = 4.8%%
+title = Tag Archives: đệm lò xo
+url = https://demtot.com/tag/dem-lo-xo/
 
 [tuananh.vn]
 match = 52.4%%
@@ -17,9 +17,9 @@ title = Đệm lò xo Techwood không bóc
 url = https://tuananh.vn/dem-lo-xo-techwood-p100.html
 
 [shopee.vn]
-match = -57.1%%
-title = Đệm lò xo Techwood 180x200x25cm giá tốt Tháng 7, 2024
-url = https://shopee.vn/search?keyword=Đệm lò xo Techwood 180x200x25cm
+match = -85.7%%
+title = [Freeship + Quà tặng] - Đệm lò xo Techwood Tuấn Anh rẻ ...
+url = https://shopee.vn/-Freeship-Quà-tặng-Đệm-lò-xo-Techwood-Tuấn-Anh-rẻ-nhất-thị-trường-i.74770078.6992817339
 
 [demxanh.com]
 match = -33.3%%
