--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-28 14:19:57
+lastsearch = 2024-07-28 15:23:10
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,8 +17,8 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -300.0%%
-title = TUI Group – The one of the world's leading tourism groups
+match = -316.7%%
+title = The one of the world's leading tourism groups - TUI Group
 url = https://www.tuigroup.com/en-en
 
 [www.tui.nl]
@@ -107,8 +107,8 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -258.3%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / ...
 url = https://www.tui.co.uk/
 
 [maritime-executive.com]
@@ -475,4 +475,9 @@ url = https://sr.linkedin.com/company/tuigroup?trk=products_details_guest_organi
 match = -200.0%%
 title = TUI
 url = https://bg.linkedin.com/company/tuigroup?trk=ppro_cprof
+
+[www.reddit.com]
+match = -300.0%%
+title = High speed emergency landing of a TUI Boeing 787 at ...
+url = https://www.reddit.com/r/LivestreamFail/comments/1c7uc86/high_speed_emergency_landing_of_a_tui_boeing_787/
 
