--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-28 16:58:09
+lastsearch = 2024-07-28 18:12:47
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -18,8 +18,8 @@ url = https://www.instagram.com/fabianajustus/?hl=en
 
 [www.reddit.com]
 match = -115.0%%
-title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
-url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
+title = Kog'Maw means sweet potato in Korean (고구마). Any ...
+url = https://www.reddit.com/r/leagueoflegends/comments/5qvb2u/kogmaw_means_sweet_potato_in_korean_고구마_any_other/
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -192,9 +192,9 @@ title = 12 Days in Seoul - by LA Seoulite - Everything about Korea
 url = https://laseoulite.substack.com/p/12-days-in-seoul
 
 [www.tiktok.com]
-match = -5.0%%
-title = Korean Afreecatv Wngml774
-url = https://www.tiktok.com/discover/korean-afreecatv-wngml774
+match = -165.0%%
+title = dat yrndj 2k diss was cold too wit bruce nd nem | yrn dj 2k diss
+url = https://www.tiktok.com/@0eari/video/7361146964244778283
 
 [www.imdb.com]
 match = 0.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -115.0%%
-title = PM calls off press meeting amid clash over THAAD ...
-url = https://en.yna.co.kr/view/AEN20170907001800315
+match = -105.0%%
+title = (EDITORIAL from Korea JoongAng Daily on April 6) ...
+url = https://en.yna.co.kr/view/AEN20180406000600320
 
 [www.vlr.gg]
 match = -145.0%%
