--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-28 14:48:14
+lastsearch = 2024-07-28 21:46:12
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -27,9 +27,9 @@ title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
 url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
 
 [changagoidemsonghong.com]
-match = 0.0%%
-title = Mẫu chăn ga gối cao cấp dòng Urban mã UC-05
-url = https://changagoidemsonghong.com/chan-ga-goi-uc05
+match = 17.9%%
+title = Chăn ga gối Home mã H17-048 Sale 30%%
+url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
 
 [flexhouse.vn]
 match = -17.9%%
@@ -62,9 +62,9 @@ title = Các mẫu chăn ga gối đệm đẹp và đáng mua nhất hiện nay
 url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 
 [quoccuongmattress.vn]
-match = -50.0%%
-title = Bộ chăn ga gối cotton 3D họa tiết quả cam dùng 2 mặt nhiều ...
-url = https://quoccuongmattress.vn/san-pham/bo-chan-ga-goi-cotton-3d-hoa-tiet-qua-cam-dung-2-mat-nhieu-mau-da-dang/
+match = -60.7%%
+title = Bộ chăn ga gối cotton 3D họa tiết hoạt hình dùng 2 mặt nhiều ...
+url = https://quoccuongmattress.vn/san-pham/bo-chan-ga-goi-cotton-3d-hoa-tiet-hoat-hinh-dung-2-mat-nhieu-mau-da-dang/
 
 [demxanh.com]
 match = -42.9%%
