--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-28 16:19:38
+lastsearch = 2024-07-28 21:46:34
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,14 +67,14 @@ title = Giữ nghề dệt chiếu Long Cang
 url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
-match = -162.5%%
-title = TIN CHIỀU 25/7: HUYỀN THOẠI M.U MUỐN GIỮ RASHFORD ...
-url = https://www.youtube.com/watch?v=LXqHpPenE6A
+match = -106.2%%
+title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
+url = https://www.youtube.com/watch?v=D5B7MtNy_kM
 
 [books.google.com]
-match = -218.8%%
-title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHaczRaizg&sig=ACfU3U3yUoALT2CsrpMM73l0U2puJmY8IQ&hl=en&sa=X&ved=2ahUKEwjk76_zs8mHAxUXFVkFHe77Ns8Q6AF6BAgeEAM
+match = -225.0%%
+title = Revue française de l'étranger et des colonies et l'exploration
+url = https://books.google.com/books?id=rAPFtofl_pIC&pg=PA70-IA3&lpg=PA70-IA3&dq=chieu+lac+soc+16&source=bl&ots=-3WfjeGHGw&sig=ACfU3U0Ei2tGFT5U8PY6S99pGYCW_MRJDw&hl=en&sa=X&ved=2ahUKEwjdtdf8_MmHAxUy48kDHfnWCwMQ6AF6BAgiEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
