--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-28 18:54:25
+lastsearch = 2024-07-28 21:45:51
 
 [chieutrucsaigon.com]
-match = -20.8%%
-title = XU HƯỚNG SỬ DỤNG CHIẾU TĂM TRÚC NĂM 2019
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/xu-huong-su-dung-chieu-tam-truc-nam-2019-68.html
+match = 16.7%%
+title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
 
 [demxanh.com]
 match = -8.3%%
@@ -17,9 +17,9 @@ title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
 url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
 
 [chieutrelanlan.com]
-match = -62.5%%
-title = Mua chiếu trúc kích thước nhỏ 1 người nằm giá nhiêu là đủ
-url = https://chieutrelanlan.com/chieu-truc-danh-cho-sinh-vien-cong-nhan-va-nhan-vien-van-phong-k33.html
+match = -66.7%%
+title = Chiếu trúc 0.8m hạt nhỏ loại không viền màu trắng chất ...
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-80x190cm-19.html
 
 [trangvangvietnam.com]
 match = -37.5%%
