--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-07-28 15:34:17
+lastsearch = 2024-07-29 01:47:21
 
 [demxanh.com]
-match = 14.7%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 11.8%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
 match = 23.5%%
@@ -97,9 +97,9 @@ title = Chiếu điều hòa là gì? Có nên sử dụng chiếu điều hòa 
 url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
 
 [www.lazada.vn]
-match = -5.9%%
-title = Chiếu điều hòa cao su non 3D, Chiếu điều hoà tặng kèm 2 ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-3d-chieu-dieu-hoa-tang-kem-2-vo-goi-dung-cho-mua-he-thoang-mat-da-nang-i2213525438.html
+match = 2.9%%
+title = Size 1.8x2m - Chiếu điều hòa tencel từ cao su non êm mát
+url = https://www.lazada.vn/products/size-18x2m-chieu-dieu-hoa-tencel-tu-cao-su-non-em-mat-khong-kem-vo-goi-chat-chon-mau-dang-khoa-79-chieu-dieu-hoa-cao-su-non-chieu-cao-su-chieu-tencel-chieu-mat-mua-he-i786966766.html
 
 [ru9.vn]
 match = 8.8%%
@@ -118,8 +118,8 @@ url = https://khonemtonghop.com/chieu-dieu-hoa-cao-su-non-la-gi/
 
 [olbedding.com]
 match = 11.8%%
-title = Chiếu điều hòa cao su non loại tốt - Mẫu 1 - Nệm Uy Tín
-url = https://olbedding.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-1/
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 5 - Nệm Uy Tín
+url = https://olbedding.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
 
 [nemuytin.com]
 match = 11.8%%
