--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-29 00:24:17
+lastsearch = 2024-07-29 01:37:28
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -32,9 +32,9 @@ title = Bộ drap mền Thắng Lợi cotton cao cấp giá chỉ 700k
 url = https://nemtotgiare.com/san-pham/bo-drap-cotton-thang-loi-90.html
 
 [tiki.vn]
-match = -44.0%%
-title = Ga trải giường thắng lợi hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=ga trải giường thắng lợi
+match = -64.0%%
+title = Bộ chăn ra gối nệm thắng lợi hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=bộ chăn ra gối nệm thắng lợi
 
 [nemhana.com]
 match = -40.0%%
@@ -44,12 +44,12 @@ url = https://nemhana.com/ga-chun/
 [demxanh.com]
 match = 4.0%%
 title = Bộ ga chun Cotton chống thấm màu trắng
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-trang.html
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-trang.html?srsltid=AfmBOopIOweHH-MQvZ22QHk8IW_QHQ_RF2fpcUiWCnaWXw66-LkMyDBV
 
 [www.lazada.vn]
 match = 0.0%%
 title = TXVhIELhu5kgZ2EgZ2nGsOG7n...
-url = https://www.lazada.vn/ga-giuong/th-ng-l-i/
+url = https://www.lazada.vn/ga-giuong/th-ng-l-i/?srsltid=AfmBOopGRVFEMO_dtr3neBq4Dcb3aQakv85JhdBKNgrw_KtHNe6r5Nq8
 
 [nemcaosuthangloi.vn]
 match = 4.0%%
