--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-28 21:24:02
+lastsearch = 2024-07-29 01:45:34
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -123.8%%
 title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCpaCtri&sig=ACfU3U2GpnrCzF9bk_CMlXMb0ObMbpdg7g&hl=en&sa=X&ved=2ahUKEwiwoYb498mHAxXREVkFHS0-I5sQ6AF6BAg-EAM
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCpcyqql&sig=ACfU3U3xnpvrBS_V-8brDJdjAnTtCw5O-g&hl=en&sa=X&ved=2ahUKEwjvrt2yssqHAxX1MlkFHS3SB9MQ6AF6BAgcEAM
 
 [www.diepxuan.com]
 match = -81.0%%
