--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-07-29 00:36:43
+lastsearch = 2024-07-29 01:37:46
 
 [bilystore.vn]
-match = -81.0%%
-title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-phong-ngu-na14/
+match = -95.2%%
+title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
+url = https://bilystore.vn/tham-trai-san-phong-ngu/?srsltid=AfmBOoowU7P7kgL8ddzVCJhoeC97sc2I5TAlr6UdyYz4rFEZaeVv43KF
 
 [shopee.vn]
 match = -33.3%%
