--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-29 02:29:10
+lastsearch = 2024-07-29 02:44:07
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -22,9 +22,9 @@ title = Quantitative Analysis of Colistin-Resistant Escherichia coli ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7910070/
 
 [thuvienphapluat.vn]
-match = -78.3%%
-title = Chỉ thị 18/CT-UBND 2019 xử lý vi phạm đề điều quản ...
-url = https://thuvienphapluat.vn/van-ban/Tai-nguyen-Moi-truong/Chi-thi-18-CT-UBND-2019-xu-ly-vi-pham-de-dieu-quan-ly-bai-song-bai-trieu-ven-bien-tinh-Thai-Binh-429663.aspx
+match = -82.6%%
+title = Chỉ thị 10/CT-UBND 2021 chấn chỉnh tăng cường quản lý ...
+url = https://thuvienphapluat.vn/van-ban/Bat-dong-san/Chi-thi-10-CT-UBND-2021-chan-chinh-tang-cuong-quan-ly-nha-nuoc-ve-dat-dai-tinh-Thai-Binh-483501.aspx
 
 [sotuphap.thaibinh.gov.vn]
 match = 17.4%%
@@ -47,9 +47,9 @@ title = ESL TEACHER : Changing School without leaving Vietnam
 url = https://www.expat.com/forum/viewtopic.php?id=994131
 
 [en.wikipedia.org]
-match = 17.4%%
-title = List of cities in Vietnam
-url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
+match = 0.0%%
+title = Ho Chi Minh City
+url = https://en.wikipedia.org/wiki/Ho_Chi_Minh_City
 
 [books.google.com]
 match = -43.5%%
@@ -57,8 +57,8 @@ title = Vietnam - Page 187 - Google Books Result
 url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrTf7SZL&sig=ACfU3U2HCp_7Nnv01Y5Fyc_FxVCqcLUOsA&hl=en&sa=X&ved=2ahUKEwjGzdGf5cmHAxVwOjQIHZeQDqQQ6AF6BAgkEAM
 
 [www.travelweekly.com]
-match = -56.5%%
-title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda
+match = -87.0%%
+title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda- Page 10
 url = https://www.travelweekly.com/Hotels/Ho-Chi-Minh-City-Vietnam/Hotels-Near-Jade-Emperor-Pagoda-p4247472?s=2+u3NLAzhVE=u&pg=10
 
 [sonoivu.thaibinh.gov.vn]
