--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-07-29 01:16:35
+lastsearch = 2024-07-29 03:45:07
 
 [www.mantubung.com]
 match = -100.0%%
@@ -18,8 +18,8 @@ url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-qua
 
 [shopee.vn]
 match = -61.1%%
-title = màn tự bung giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=màn tự bung
+title = Màn mùng chụp tự bung trẻ em chống muỗi cao cấp
+url = https://shopee.vn/Màn-mùng-chụp-tự-bung-trẻ-em-chống-muỗi-cao-cấp-cho-bé-lớn-trẻ-em-thông-minh-gấp-gọn-để-nôi-và-giường-i.833073428.19530759632
 
 [h5.lazada.vn]
 match = -33.3%%
